--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,6 +12,11 @@
     <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
 
     <title>Blog</title>
+    <style>
+        .link:hover{
+            color: black;
+        }
+      </style>
   </head>
   <body>
    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
